# waveflow

./: Cargo.toml  README.md  gen_img.py  old.yaml
example/: map.yaml
example/tiles/: street.yaml
example/tiles/sectors/: background.yaml  foreground.yaml  middleground.yaml
src/: config.rs  main.rs  map.rs
src/cli/: cli.rs
src/generators/: tile.rs
src/rules/: sector.rs  tile.rs  wfc.rs
