[package]
name = "waveflow"
version = "0.1.0"
edition = "2024"
authors = ["Neo Mannskär"]
license = "Apache-2.0"
description = "Highly customizable Wave Function Collapse tool for terrain generation and mesh-ready heightmaps, powered by recursive YAML rules. "

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
image = "0.25.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
